Fix pic alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -239,11 +239,11 @@ section {
     padding: 10px;
 }
 div#one {
-    width: 75%;
+    width: 25%;
     float: left;
 }
 div#two {
-   margin-left:75%;
+   margin-left:25%;
 }
 
 @media only screen and (max-width:800px){
