--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -259,7 +259,7 @@ ul.listing li.listing-item a {
  * Profile picture on home page
  */
 .profile-home {
-    float: right;
+    float: left;
     max-height: $profilepic-size;
     max-width:  $profilepic-size;
     
